[package]
name = "RustPEek"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RustPEek"
path = "src/main.rs"

[dependencies]
goblin = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ratatui = "0.28"
crossterm = "0.28"
cli-clipboard = "0.4"
